correctes tachinas overflow issue

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -2445,6 +2445,9 @@ h3 {
 					background: none;
 					color: @color-accent;
 					text-shadow: none;
+					text-align: right;
+					width: 150px;
+					.clearfix;
 				}
 
 				a {
